--- a/projectRecoveryPsu/.project
+++ b/projectRecoveryPsu/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>projectRecoveryPsu</name>
+	<name>projectRecoveryJny</name>
 	<comment></comment>
 	<projects>
 	</projects>
